Styled button to be width of header and correctly render description text to respect whitespace

--- a/resources/css/alerts.css
+++ b/resources/css/alerts.css
@@ -9,6 +9,12 @@
 
 .alert-button {
     text-decoration: none;
+    width: 100%;
+    text-align: left;
+}
+
+.alert-description {
+    white-space: pre-wrap;
 }
 
 .alert-card {
